--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,16 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Jingwei Zhao</h1>
+            <h1>Xiaomei Wang</h1>
             <hr>  
             <div class="col-lg-3 col-md-6 text-center">
-                <a href="mailto:jz4807@nyu.edu">
+                <a href="mailto:xxx@sjtu.edu.cn">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p>jz4807@nyu.edu</p>
+                    <p>xxx@sjtu.edu.cn</p>
                 </a>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
-                <a href="https://github.com/zhaojw1998">
+                <a href="https://github.com/WangXiaoMei1/">
                 <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>{{site.github_username}}</p>
                 </a>
@@ -18,11 +18,11 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <a href="https://www.linkedin.com/in/jingweizhao1998/">
                     <i class="fa fa-linkedin fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p>赵经纬</p>
+                    <p>王小美</p>
                 </a>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
-                <a href="/files/CV_Jingwei.pdf">
+                <a href="/files/harshibars-resume.pdf">
                 <i class="fa fa-suitcase fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>My CV</p>
                 </a>
