--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -159,7 +159,7 @@ header {
     min-height: auto;
     @include background-cover;
     background-position: center;
-    background-image: url('../img/starsea.jfif');
+    background-image: url('../img/sea.jfif');
     text-align: center;
     color: white;
     .header-content {
